--- a/src/style.css
+++ b/src/style.css
@@ -26,9 +26,8 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  flex-direction: row-reverse;
 }
 
 h1 {
@@ -37,30 +36,14 @@ h1 {
 }
 
 #app {
+  background-color:rgba(25,25,25,0.95);
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  margin: 1em 0 0 0;
+  border-radius:0.6em 0 0 0.6em;
+  padding: 2rem 3rem 2rem 2rem;
+  z-index:4;
+  height: 90vh;
+  user-select: none;
 }
 
 button {
@@ -82,15 +65,11 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+canvas {
+  cursor:grab;
+  position:absolute;
+}
+
+canvas:active {
+  cursor:grabbing;
 }
