--- a/src/style.css
+++ b/src/style.css
@@ -73,3 +73,28 @@ canvas {
 canvas:active {
   cursor:grabbing;
 }
+
+#notification {
+  position:absolute;
+  bottom:20%;
+  left:40%;
+  background-color:rgba(10,10,10,0.9);
+  color: white;
+  padding:1em;
+  font-size: 1.25em;
+  text-align:center;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.25);
+  transform:translate(-50%,-50%);
+  opacity: 1;
+  transition: opacity 2s ease-in-out 1s;
+  user-select: none;
+  cursor:grab;
+}
+
+#notification:active {
+  cursor:grabbing;
+}
+
+#notification.fadeout {
+  opacity: 0;
+}
