--- a/src/style.css
+++ b/src/style.css
@@ -74,11 +74,21 @@ canvas:active {
   cursor:grabbing;
 }
 
+#dropdown {
+  top:1.5em;
+  left:1.5em;
+  position:absolute;
+  font-size: 1.2em;
+  padding:0.5em;
+  opacity:0.95;
+}
+
+
 #notification {
   position:absolute;
   bottom:20%;
   left:40%;
-  background-color:rgba(10,10,10,0.9);
+  background-color:rgba(20,20,25,0.9);
   color: white;
   padding:1em;
   font-size: 1.25em;
@@ -86,9 +96,10 @@ canvas:active {
   box-shadow: 5px 5px 5px rgba(0,0,0,0.25);
   transform:translate(-50%,-50%);
   opacity: 1;
-  transition: opacity 2s ease-in-out 1s;
+  transition: opacity 2s ease-in-out 3s;
   user-select: none;
   cursor:grab;
+  border-radius:0.1em;
 }
 
 #notification:active {
@@ -97,4 +108,5 @@ canvas:active {
 
 #notification.fadeout {
   opacity: 0;
+
 }
