--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body {
   margin: 0;
   display: flex;
   min-width: 320px;
-  flex-direction: row;
+  flex-direction: row-reverse;
 }
 
 h1 {
@@ -148,8 +148,4 @@ canvas:active {
 
 #shortest-path-answer-text:active {
   cursor:grabbing;
-}
-
-svg {
-  height: 100vh !important;
 }
